Add readme key for poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "fenkeysmanagement"
 version = "1.0.0"
 description = ""
 authors = ["brodokk"]
+readme = "README.md"
 
 [tool.poetry.scripts]
 fenkm = 'fenkeysmanagement:main'
