--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -27,3 +27,7 @@ jobs:
       - name: Release
           uses: softprops/action-gh-release@v1
           if: startsWith(github.ref, 'refs/tags/')
+          with:
+            files: |
+              whl
+              tar
