--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,13 @@ fenkm = 'fenkeysmanagement:main'
 python = "^3.7"
 tabulate = "^0.8.10"
 
+[tool.poetry.dev-dependencies]
+flakeheaven = "^3.0.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.flakeheaven]
+format = "grouped"
+show_source = true
